fix shopping and like list sliding too much to the right

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -528,7 +528,6 @@
 .shopping {
   position: absolute;
   top: 0;
-  left: 7rem;
   transform: translateX(-150%);
   background-color: #fff;
   border: 1px solid var(--color-secondary);
@@ -577,7 +576,6 @@
 .likes {
   position: absolute;
   top: 0;
-  left: 7rem;
   transform: translateX(-150%);
   background-color: #fff;
   border: 1px solid var(--color-secondary);
